# contact_graspnet_pytorch

./: .gitignore  setup.cfg
contact_graspnet_pytorch/contact_graspnet_pytorch/: config.yaml  config_utils.py  contact_grasp_estimator.py  contact_graspnet.py  data.py  inference.py  mesh_utils.py  visualization_utils_o3d.py  wrapper.py
