[metadata]
name = contact-graspnet-pytorch
version = 0.1.6
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/python-template
description = Python template project
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =contact_graspnet_pytorch
install_requires = huggingface_hub
                   pyrender==0.1.45
                   trimesh==4.2.4
                   torch==2.2.2
                   absl-py==1.4.0
                   addict==2.4.0
                   apptools==5.2.0
                   cachetools==5.3.1
                   click==8.1.3
                   configargparse==1.5.3
                   configobj==5.0.8
                   contourpy==1.1.0
                   cycler==0.11.0
                   cython==0.29.35
                   dash==2.10.2
                   dash-core-components==2.0.0
                   dash-html-components==2.0.0
                   dash-table==5.0.0
                   envisage==7.0.3
                   flask==2.2.5
                   fonttools==4.40.0
                   google-auth==2.20.0
                   google-auth-oauthlib==1.0.0
                   grpcio==1.54.2
                   importlib-metadata==6.7.0
                   importlib-resources==5.12.0
                   itsdangerous==2.1.2
                   joblib==1.2.0
                   kiwisolver==1.4.4
                   markdown==3.4.3
                   matplotlib==3.7.1
                   oauthlib==3.2.2
                   open3d==0.17.0
                   opencv-python==4.8.0.76
                   pyasn1==0.5.0
                   pyasn1-modules==0.3.0
                   pyface==8.0.0
                   pyparsing==3.0.9
                   pyquaternion==0.9.9
                   python-fcl==0.7.0.4
                   requests-oauthlib==1.3.1
                   rsa==4.9
                   scikit-learn==1.2.2
                   threadpoolctl==3.1.0
                   traits==6.4.1
                   traitsui==8.0.0
                   vtk==9.2.6
                   werkzeug==2.2.3
                   Rtree==1.2.0
                   provider==0.11.0

[options.packages.find]
where=contact_graspnet_pytorch

[options.package_data]
* = *.yaml, *.pt

[options.entry_points]
console_scripts = 