[metadata]
name = contact-graspnet-pytorch
version = 0.1.6
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/python-template
description = Python template project
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =contact_graspnet_pytorch
install_requires = huggingface_hub
                   pyrender==0.1.45
                   trimesh==4.2.4
                   torch==2.2.2
                   opencv-contrib-python==4.8.0.74
                   open3d==0.17.0

[options.packages.find]
where=contact_graspnet_pytorch

[options.package_data]
* = *.yaml, *.pt

[options.entry_points]
console_scripts = 